plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.12'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.cloud'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {

	// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.10'

	// JPA (Jakarta Persistence API)
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// Lombok (엔티티와 DTO에 사용)
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// 유효성 검사 (Jakarta Validation API)
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// 비밀번호 암호화 passwordEncoder
	implementation 'org.springframework.security:spring-security-crypto:5.7.1'

	// @NotBlank, @NotNull, @Email 등과 같은 유효성 검사 애노테이션 사용
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// Swagger (SpringDoc OpenAPI 3) 추가
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
	// https://mvnrepository.com/artifact/com.auth0/java-jwt
	implementation group: 'com.auth0', name: 'java-jwt', version: '4.4.0'
}

tasks.named('test') {
	useJUnitPlatform()
}